dataset1235/2025-2/805158916/users/1147723658/executions/1584167357_2826299531.log
== SUBMISSION (2025-08-27 14:42:22)
-- CODE: 
valor_compra = float(input(""Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago: "))
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:43:08)
-- CODE: 
valor_compra = float(input("Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago: "))
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
Digite o valor da compra:Digite o valor pago: 0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
Digite o valor da compra:Digite o valor pago: 2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
Digite o valor da compra:Digite o valor pago: 18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
Digite o valor da compra:Digite o valor pago: 19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
Digite o valor da compra:Digite o valor pago: 3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
Digite o valor da compra:Digite o valor pago: 52.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:25:53)
-- CODE: 
valor_compra = float(input("10*10"))
valor_pago = float(input("10"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:25:40)
-- CODE: 
valor_compra = float(input("10*10"))
valor_pago = float(input("100"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:41:39)
-- CODE: 
valor_compra = float(input(""Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago:"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:26:07)
-- CODE: 
valor_compra = float(input("10*1"))
valor_pago = float(input("10"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    troco = valor_pago - valorcompra
                         ^^^^^^^^^^^
NameError: name 'valorcompra' is not defined. Did you mean: 'valor_compra'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:43:08)
-- CODE: 
valor_compra = float(input("Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago: "))
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
---- user output:
Digite o valor da compra:Digite o valor pago: 0.0
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
---- user output:
Digite o valor da compra:Digite o valor pago: 2.75
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
---- user output:
Digite o valor da compra:Digite o valor pago: 18.0
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
---- user output:
Digite o valor da compra:Digite o valor pago: 19.0
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
---- user output:
Digite o valor da compra:Digite o valor pago: 3.75
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
---- user output:
Digite o valor da compra:Digite o valor pago: 52.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 14:42:20)
-- CODE: 
valor_compra = float(input(""Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago: "))
troco = valor_pago - valor_compra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:41:35)
-- CODE: 
valor_compra = float(input(""Digite o valor da compra:"))
valor_pago = float(input("Digite o valor pago:"))
troco = valor_pago - valorcompra
print(troco)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
10.0
10.0
---- correct output:
0.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 2:
---- input:
97.25
100.0
---- correct output:
2.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 3:
---- input:
32.0
50.0
---- correct output:
18.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 4:
---- input:
181.0
200.0
---- correct output:
19.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 5:
---- input:
1.25
5.0
---- correct output:
3.75
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- TEST CASE 6:
---- input:
48.0
100.0

---- correct output:
52.0
-- ERROR:
File "XXXX", line 1
    valor_compra = float(input(""Digite o valor da compra:"))
                                                          ^
SyntaxError: unterminated string literal (detected at line 1)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
